--- a/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
+++ b/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
@@ -218,18 +218,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HwM-Ta-z7b">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HwM-Ta-z7b">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.2116111815" green="0.2000738084" blue="0.19607773419999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="separatorColor" red="0.21176470589999999" green="0.20000000000000001" blue="0.1960784314" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoriteCell" id="Jje-jp-5Ua">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoriteCell" rowHeight="160" id="Jje-jp-5Ua" customClass="FavoriteTableViewCell" customModule="Reciplease" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jje-jp-5Ua" id="QjC-Ze-vVz">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0WW-YD-Vey" userLabel="Recipe Image View">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="37W-cL-fUJ" userLabel="Gradient View">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="rvb-jj-u78" userLabel="Picture Stack View">
+                                                    <rect key="frame" x="319.5" y="11" width="74.5" height="74.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Servs 🍴" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skU-tE-N30">
+                                                            <rect key="frame" x="0.0" y="0.0" width="74.5" height="40"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Time ⏱" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80i-I7-8ix">
+                                                            <rect key="frame" x="0.0" y="35" width="69.5" height="39.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.2116111815" green="0.2000738084" blue="0.19607773419999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="rvb-jj-u78" secondAttribute="height" multiplier="1:1" id="At9-ti-O7T"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="MMd-b2-RWk" userLabel="Labels Stack View">
+                                                    <rect key="frame" x="15" y="91" width="399" height="64"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgt-XN-JgG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="135.5" height="35"/>
+                                                            <fontDescription key="fontDescription" name="KohinoorBangla-Semibold" family="Kohinoor Bangla" pointSize="25"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J2P-vL-hsR">
+                                                            <rect key="frame" x="0.0" y="36" width="170.5" height="28"/>
+                                                            <fontDescription key="fontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="20"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.2116111815" green="0.2000738084" blue="0.19607773419999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <constraints>
+                                                <constraint firstItem="0WW-YD-Vey" firstAttribute="leading" secondItem="QjC-Ze-vVz" secondAttribute="leading" id="10k-Uz-8Gu"/>
+                                                <constraint firstItem="37W-cL-fUJ" firstAttribute="leading" secondItem="0WW-YD-Vey" secondAttribute="leading" id="Bi6-R7-C5f"/>
+                                                <constraint firstAttribute="bottom" secondItem="MMd-b2-RWk" secondAttribute="bottom" constant="5" id="Kbo-L6-cmo"/>
+                                                <constraint firstItem="0WW-YD-Vey" firstAttribute="top" secondItem="QjC-Ze-vVz" secondAttribute="top" id="Loh-0J-LBr"/>
+                                                <constraint firstItem="rvb-jj-u78" firstAttribute="top" secondItem="QjC-Ze-vVz" secondAttribute="topMargin" id="M1b-Kp-qgj"/>
+                                                <constraint firstItem="MMd-b2-RWk" firstAttribute="leading" secondItem="QjC-Ze-vVz" secondAttribute="leading" constant="15" id="PPh-E7-dXn"/>
+                                                <constraint firstItem="37W-cL-fUJ" firstAttribute="bottom" secondItem="0WW-YD-Vey" secondAttribute="bottom" id="Qfe-gx-2E3"/>
+                                                <constraint firstAttribute="bottom" secondItem="0WW-YD-Vey" secondAttribute="bottom" id="ahq-Qx-WG1"/>
+                                                <constraint firstAttribute="trailing" secondItem="0WW-YD-Vey" secondAttribute="trailing" id="ba3-dk-vfb"/>
+                                                <constraint firstItem="37W-cL-fUJ" firstAttribute="top" secondItem="0WW-YD-Vey" secondAttribute="top" id="cPE-3N-QJD"/>
+                                                <constraint firstAttribute="trailing" secondItem="MMd-b2-RWk" secondAttribute="trailing" id="f9C-cZ-sCa"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="rvb-jj-u78" secondAttribute="trailing" id="hfM-m8-N7O"/>
+                                                <constraint firstItem="37W-cL-fUJ" firstAttribute="trailing" secondItem="0WW-YD-Vey" secondAttribute="trailing" id="ity-Po-JeQ"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="ingredientDetailsLabel" destination="J2P-vL-hsR" id="1s6-iP-JRU"/>
+                                            <outlet property="recipeImageView" destination="0WW-YD-Vey" id="7eM-bI-O45"/>
+                                            <outlet property="recipeTitleLabel" destination="pgt-XN-JgG" id="BTL-la-3o3"/>
+                                            <outlet property="servingsLabel" destination="skU-tE-N30" id="3OY-N2-Kfu"/>
+                                            <outlet property="servsAndTimeStackView" destination="rvb-jj-u78" id="dbP-Op-bST"/>
+                                            <outlet property="timeLabel" destination="80i-I7-8ix" id="Moy-Ut-27G"/>
                                             <segue destination="8bq-7a-PLS" kind="show" id="qMe-gm-lSN"/>
                                         </connections>
                                     </tableViewCell>
@@ -561,7 +630,7 @@
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L4B-0j-Ijl">
                                 <rect key="frame" x="20" y="797" width="374" height="45"/>
-                                <color key="backgroundColor" red="0.21176470588235294" green="0.20000000000000001" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.34162098169999999" green="0.57520991560000001" blue="0.38036242129999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="hpZ-6K-8Ke"/>
                                 </constraints>
